--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   "author": "nathan odonnell",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors.ts": "^1.0.20",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/colors": "^1.2.1",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
   }
