--- a/package.json
+++ b/package.json
@@ -1,29 +1,42 @@
 {
-  "name": "kickstarterclone",
-  "version": "1.0.0",
-  "description": "a clone of the kickstarter website for youtube",
-  "main": "index.js",
-  "scripts": {
-    "start": "node backend/server.ts",
-    "dev": "nodemon backend/server.ts"
-  },
-  "author": "nathan odonnell",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "colors.ts": "^1.0.20",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.1"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/colors": "^1.2.1",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
-    "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1"
-  }
+    "name": "kickstarterclone",
+    "version": "1.0.0",
+    "description": "a clone of the kickstarter website for youtube",
+    "main": "index.js",
+    "scripts": {
+        "start": "node backend/server.ts",
+        "dev": "nodemon backend/server.ts",
+        "prepare": "husky install"
+    },
+    "author": "nathan odonnell",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "colors.ts": "^1.0.20",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "express-async-handler": "^1.2.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.5.1"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/colors": "^1.2.1",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.8",
+        "@typescript-eslint/eslint-plugin": "^5.33.1",
+        "@typescript-eslint/parser": "^5.33.1",
+        "eslint": "^8.22.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-standard-with-typescript": "^22.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.2.4",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.0.0",
+        "nodemon": "^2.0.19",
+        "prettier": "^2.7.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.7.4",
+        "husky": "^8.0.0"
+    }
 }
